[package]
name = "wills-joke-cli"
version = "0.1.0"
description = "A very cool joke cli"
authors = ["Will Lane <williamlane923@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/willdoescode/wills-joke-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.121"
serde_derive = "1.0.120"
structopt = "0.3.21"
